# algorithms-in-c

./: .gitignore  CMakeLists.txt  README.md  main.c  package.json
data-structures/lists/headers/: list.h
data-structures/lists/linked-list/: one-way-linked-list.c  singly-linked-list.c  test.cpp
data-structures/lists/linked-list/headers/: one-way-linked-list.h  singly-linked-list.h
data-structures/lists/linked-list/singly-linked-list/: singly-linked-list.c
data-structures/lists/linked-list/singly-linked-list/header/: singly-linked-list.h
data-structures/lists/sequential-list/: sequential-list.c
data-structures/lists/sequential-list/headers/: sequential-list.h
data-structures/stacks/chain-stack/: chain-stack.c  test.cpp
data-structures/stacks/chain-stack/header/: chain-stack.h
data-structures/stacks/stack/: stack.c
data-structures/stacks/stack/header/: stack.h
